--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header h1 {
     border-radius: 10px;
     border-top: 3px lightskyblue solid;
 
+    cursor: pointer;
 }
 
 .counters .container {
@@ -52,11 +53,32 @@ header h1 {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
     text-align: center;
+    padding: 30px;
 }
 
 .counters i {
     color: lightskyblue;
     margin-bottom: 5px;
+    cursor: pointer;
+    padding: 10px;
+    transition: .3s;
+}
+
+#youtube:hover i {
+    color: #c4302b;
+    padding: 0;
+}
+#twitter:hover i {
+    color: #00acee;
+    padding: 0;
+}
+#facebook:hover i {
+    color: #4267B2;
+    padding: 0;
+}
+#linkedin:hover i {
+    color: #0e76a8;
+    padding: 0;
 }
 
 .counters .counter {
@@ -64,13 +86,25 @@ header h1 {
     margin: 10px;
 }
 
-@media(max-width: 700px) {
+@media(max-width: 800px) {
     .counters .container {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .counters .container > div:nth-of-type(1), .counters .container > div:nth-of-type(2) {
+    .counters .container > div {
        border-bottom: 1px lightskyblue solid;
        padding-bottom: 20px; 
+    }
+}
+
+@media(max-width: 500px) {
+
+    body {
+        width: 100%;
+        height: 100%;
+    }
+
+    .counters .container {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
